--- a/src/main/resources/windows/tabs/Kamerton5_2.fxml
+++ b/src/main/resources/windows/tabs/Kamerton5_2.fxml
@@ -6,12 +6,12 @@
 
 <AnchorPane stylesheets="@../../css/firmwareGenerator.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.tabs.Kamerton5_2">
     <children>
-        <Label fx:id="serialNumberLabel" layoutX="161.0" layoutY="59.0" prefHeight="25.0" text="серийный номер:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="45.0">
+        <Label layoutX="179.0" layoutY="24.0" prefHeight="25.0" text="тип устройства:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="10.0">
             <font>
                 <Font size="18.0" />
             </font></Label>
         <ComboBox fx:id="typeComboBox" layoutX="309.0" layoutY="25.0" onAction="#typeComboBoxChange" prefHeight="25.0" prefWidth="150.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="10.0" />
-        <Label layoutX="179.0" layoutY="24.0" prefHeight="25.0" text="тип устройства:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="10.0">
+        <Label fx:id="serialNumberLabel" layoutX="161.0" layoutY="59.0" prefHeight="25.0" text="серийный номер:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="45.0">
             <font>
                 <Font size="18.0" />
             </font></Label>
@@ -29,23 +29,37 @@
                 <Font size="14.0" />
             </font></TextField>
 
-        <Label fx:id="numberOfChannelsLabel" alignment="CENTER_RIGHT" layoutX="138.0" layoutY="120.0" prefHeight="25.0" text="количество каналов:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="115.0">
+        <Label fx:id="countChannelsLabel" alignment="CENTER_RIGHT" layoutX="138.0" layoutY="120.0" prefHeight="25.0" text="количество каналов:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="115.0">
             <font>
                 <Font size="18.0" />
             </font></Label>
-        <TextField fx:id="numberOfChannelsField" disable="true" layoutX="309.0" layoutY="119.0" onKeyReleased="#numberOfChannelsFieldChange" prefHeight="25.0" prefWidth="150.0" text="4" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="115.0">
+        <TextField fx:id="countChannelsField" disable="true" layoutX="309.0" layoutY="119.0" onKeyReleased="#countChannelsFieldChange" prefHeight="25.0" prefWidth="150.0" text="4" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="115.0">
             <font>
                 <Font size="14.0" />
             </font></TextField>
 
-        <Label fx:id="controllerLabel" alignment="CENTER_RIGHT" layoutX="138.0" layoutY="74.0" prefHeight="25.0" text="контроллер:" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="150.0">
+        <Label fx:id="upTimerLabel" alignment="CENTER_RIGHT" layoutX="10.0" layoutY="152.0" prefHeight="25.0" text="время наработки" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="150.0">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <ComboBox fx:id="controllerComboBox" disable="true" layoutX="309.0" layoutY="25.0" onAction="#controllerComboBoxChange" prefHeight="25.0" prefWidth="150.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="150.0" />
-
-        <Button fx:id="button" layoutX="210.0" layoutY="152.0" mnemonicParsing="false" onAction="#buttonPush" prefHeight="100.0" text="Сгенерировать" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="185.0">
+        <TextField fx:id="hourField" layoutX="181.0" layoutY="145.0" onKeyReleased="#hourFieldChange" prefHeight="25.0" prefWidth="80.0" text="0" AnchorPane.rightAnchor="210.0" AnchorPane.topAnchor="150.0">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </TextField>
+        <Label fx:id="colonLabel" alignment="CENTER_RIGHT" layoutX="10.0" layoutY="160.0" prefHeight="25.0" text=":" AnchorPane.rightAnchor="202.5" AnchorPane.topAnchor="150.0">
+            <font>
+                <Font size="18.0" />
+            </font>
+        </Label>
+        <TextField fx:id="minutesField" layoutX="191.0" layoutY="160.0" onKeyReleased="#minutesFieldChange" prefHeight="25.0" prefWidth="60.0" text="0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="150.0">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </TextField>
+        
+        <Button fx:id="button" disable="true" layoutX="210.0" layoutY="152.0" mnemonicParsing="false" onAction="#buttonPush" prefHeight="100.0" text="Сгенерировать" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="185.0">
             <font>
                 <Font size="25.0" />
             </font>
